samples/_failures_safe/1761078174_8a40be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a12172f.c: In function ‘main’:
./samples/SAFE/__tmp_2a12172f.c:194:23: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  194 |     int token_count = token
      |                       ^~~~~
      |                       Token
./samples/SAFE/__tmp_2a12172f.c:194:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2a12172f.c:194:5: error: expected ‘,’ or ‘;’ at end of input
  194 |     int token_count = token
      |     ^~~
./samples/SAFE/__tmp_2a12172f.c:194:5: error: expected declaration or statement at end of input
